src/objects/Candidate_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>Rule__c</referenceTo>
        <relationshipLabel>Candidate Criteria</relationshipLabel>
        <relationshipName>Candidate_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>150</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Candidate Criteria</label>
    <nameField>
        <displayFormat>CCN-{0000}</displayFormat>
        <label>Candidate Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>